# dotfiles

./: .Xresources  .bash_profile  .bashrc  .gitignore  .gitmodules  .profile  .stow-local-ignore  .xinitrc  .zprofile  .zshrc  Makefile  README  README.md  deploy
.config/: mimeapps.list  shellcheckrc  user-dirs.dirs
.config/VSCodium/: product.json
.config/X11/: xinitrc  xprofile  xresources
.config/bat/: config
.config/beets/: config.yaml
.config/cava/: config
.config/dwl/: exec
.config/emacs/: .gitignore  README.org  init.el
.config/ezrun/: config.toml  ezrunrc  screenshot.toml
.config/fastfetch/: config.jsonc
.config/fontconfig/: fonts.conf
.config/foot/: foot.ini
.config/fuzzel/: fuzzel.ini
.config/git/: config
.config/gtk-2.0/: gtkrc
.config/gtk-3.0/: gtk.css  settings.ini
.config/htop/: htoprc
.config/jgmenu/: jgmenurc  menu.csv
.config/kanshi/: config
.config/lf/: cleaner  lfrc  previewer
.config/mako/: config
.config/mpd/: mpd.conf
.config/ncmpcpp/: bindings  config
.config/ncspot/: .gitignore  config.toml
.config/newsraft/: config
.config/npm/: npmrc
.config/nvim/: .gitignore  init.lua  init.vim  lazy-lock.json
.config/openbox/: rc.xml
.config/picom/: picom.conf
.config/qt6ct/: .gitignore  qt6ct.conf
.config/xmonad/: build  xmobar-top.hs  xmobar.hs  xmonad-frosty.cabal  xmonad.hs
.vim/: vimrc
bash/: .bash_profile  .bashrc
dwm/: .xinitrc
profile/: blizzard  glacier  styx  telesto
shell/: .profile
x11/: .Xresources  .xinitrc
xresources/: .Xresources
zsh/: .zprofile  .zshrc
(+236 files in other folders)
