cabal-version:      3.0
name:               xmonad-frosty
version:            0.1.0.0
build-type:         Simple

executable xmonad
    main-is:          xmonad.hs
    build-depends:      base ^>=4.17.2.1
                      , xmonad >=0.18
                      , xmonad-contrib >=0.18
                      , containers
                      , X11
    default-language: Haskell2010
